tests/error/misc_errors/wasm_bad_type.err
Error: WASM signature error (at $FILE:10:4)
   | 
 8 | class Foo:
 9 |     @wasm
10 |     def two(self: "Foo", x: qubit) -> qubit: ...
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ WASM function signature contained an unsupported type:
   |                                                  `qubit`

Guppy compilation failed due to 1 previous error
